include/arcane_sdk.h

/* SPDX-License-Identifier: MIT OR Apache-2.0 */

#ifndef ARCANE_SDK_H
#define ARCANE_SDK_H

#pragma once

/* Generated by cbindgen from src/ffi.rs — do not edit by hand. */

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

// Action return codes.
#define ARCANE_OK 0

#define ARCANE_ERR_ARGUMENT 1

#define ARCANE_ERR_SDK 2

// Getter return codes (negative).
#define ARCANE_ERR_NOT_INITIALIZED -1

#define ARCANE_ERR_BAD_BUFFER -2

#define ARCANE_ERR_BUFFER_TOO_SMALL -3

#define ARCANE_ERR_UNAVAILABLE -4

// `arcane_sdk_ownership` results.
#define ARCANE_OWNERSHIP_OWNED 0

#define ARCANE_OWNERSHIP_DRM_DISABLED 1

// `arcane_sdk_lobby_create` visibility values.
#define ARCANE_LOBBY_FRIENDS 0

#define ARCANE_LOBBY_CODE 1

#define ARCANE_LOBBY_FRIENDS_AND_CODE 2

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

// Whether an achievement is unlocked, from the cache the last
// `arcane_sdk_achievements_json` call filled.
//
// Reads memory only. Returns 1 (unlocked), 0 (locked), `-1` when the client is
// not initialised, `-2` when `key` is null or not UTF-8, and `-4` when the SDK
// has nothing to answer with: the list was never loaded, or it did not carry
// this key.
//
// # Safety
//
// `key` must be a valid NUL-terminated C string.
int arcane_sdk_achievement_is_unlocked(const char *key);

// Unlock an achievement for the signed-in player.
//
// `key` is the achievement key from the Arcane portal, NUL-terminated UTF-8.
// Idempotent — call it every time the condition holds. One synchronous loopback
// call, so never call it from the render loop.
//
// Returns 0 on success (including an already-unlocked or queued answer), 1 if
// `key` is null or not UTF-8 or the client is not initialised, 2 on an SDK
// error written to `err_buf` as `"code: message"`.
//
// # Safety
//
// `key` must be a valid NUL-terminated C string. `err_buf` must be null or
// point to at least `err_len` writable bytes.
int arcane_sdk_achievement_unlock(const char *key, char *err_buf, size_t err_len);

// Write every achievement of this title as JSON into `buf`:
// `{"achievements":[{"key","title","description","icon_url","hidden","unlocked_at"}]}`.
//
// `unlocked_at` is a Unix timestamp, or `null` while the achievement is locked.
// This makes one synchronous loopback call — call it on a loading screen or the
// achievements screen, never from the render loop. It also fills the cache
// `arcane_sdk_achievement_is_unlocked` reads.
//
// Returns the bytes written, or `-1` when not initialised, `-2` / `-3` for the
// buffer, `-4` when the call failed — the failure is then readable with
// `arcane_sdk_last_error_json`.
//
// # Safety
//
// `buf` must be null or point to at least `len` writable bytes.
int arcane_sdk_achievements_json(char *buf, size_t len);

// Unix timestamp of the last successful check, or -1 when not initialised.
long long arcane_sdk_checked_at(void);

// Write the device fingerprint into `buf` — this machine *and* this account.
//
// Derived from the account key, not the hardware: the same machine reports a
// different value for a different signed-in account. Empty when DRM is off for
// the title and no fingerprint is cached yet.
//
// # Safety
//
// `buf` must be null or point to at least `len` writable bytes.
int arcane_sdk_device_hash(char *buf, size_t len);

// Count one rendered frame, for FPS sampling. Call once per frame.
//
// Outside a sampling window this is a relaxed atomic load; inside one it adds a
// relaxed increment. Does nothing before `arcane_sdk_init` succeeds.
void arcane_sdk_frame(void);

// Write this player's friends as JSON into `buf`:
// `{"friends":[{"user_id","pseudo","online","in_game"}],"stale":bool}`.
//
// `in_game` is `true` for a friend playing this title right now. `stale` is
// `true` when the Arcane desktop app answered from its cache because it is
// offline. This makes one synchronous loopback call — call it when a menu
// opens or on a timer of your own, never from the render loop.
//
// Returns the bytes written, or `-1` when not initialised, `-2` / `-3` for the
// buffer, `-4` when the call failed — the failure is then readable with
// `arcane_sdk_last_error_json`.
//
// # Safety
//
// `buf` must be null or point to at least `len` writable bytes.
int arcane_sdk_friends_json(char *buf, size_t len);

// Write the game id this client was initialised with into `buf`.
//
// # Safety
//
// `buf` must be null or point to at least `len` writable bytes.
int arcane_sdk_game_id(char *buf, size_t len);

// Verify ownership and build the process-wide client. Call once at launch.
//
// You pass no id: Arcane Powered puts the game id of this title in
// `ARCANE_GAME_ID` and the signed-in account in `ARCANE_USER_ID` when it
// launches the game, and the SDK reads both. For local development you set
// them yourself.
//
// Returns 0 on success, 2 on an SDK error written to `err_buf` as
// `"code: message"` — `missing_game_id` when `ARCANE_GAME_ID` is not set.
//
// # Safety
//
// `err_buf` must be null or point to at least `err_len` writable bytes.
int arcane_sdk_init(char *err_buf, size_t err_len);

// Whether a client is currently initialised. Returns 1 or 0.
int arcane_sdk_is_initialized(void);

// Write the last error as JSON into `buf`:
// `{"code","message","hint","retryable","context"}`.
//
// Returns -4 when no error has been recorded since the last success.
//
// # Safety
//
// `buf` must be null or point to at least `len` writable bytes.
int arcane_sdk_last_error_json(char *buf, size_t len);

// Write the join code this game was launched with into `buf`.
//
// Set when the player started the game from a friend's "Join" in the
// launcher. Read from the Arcane desktop app on the first call and cached for
// the process; `-4` when there is none, when the desktop app predates the
// route, or in offline-only mode. 8 bytes is enough.
//
// # Safety
//
// `buf` must be null or point to at least `len` writable bytes.
int arcane_sdk_launch_join_code(char *buf, size_t len);

// Close a lobby this player hosts. Its members get a `lobby_closed` event.
//
// Same return values as `arcane_sdk_lobby_invite`.
//
// # Safety
//
// `lobby_id` must be a valid NUL-terminated C string. `err_buf` must be null
// or point to at least `err_len` writable bytes.
int arcane_sdk_lobby_close(const char *lobby_id, char *err_buf, size_t err_len);

// Open a lobby with this player as its host and write it as JSON into `buf`.
//
// `visibility` is `ARCANE_LOBBY_FRIENDS` (0), `ARCANE_LOBBY_CODE` (1) or
// `ARCANE_LOBBY_FRIENDS_AND_CODE` (2). `payload_b64` is your connection blob,
// base64-encoded, at most 4096 raw bytes — null means no payload. The JSON is
// `{"lobby_id","join_code","host_user_id","host_payload","members":[{"user_id",
// "pseudo","payload"}],"max_players"}`, payloads base64.
//
// One synchronous loopback call — never from the render loop. Returns the
// bytes written, or `-1` when not initialised, `-2` on a bad argument or
// buffer, `-3` when the buffer is too small, `-4` when the call failed — then
// readable with `arcane_sdk_last_error_json`.
//
// # Safety
//
// `payload_b64` must be null or a valid NUL-terminated C string. `buf` must be
// null or point to at least `len` writable bytes.

int arcane_sdk_lobby_create(uint8_t max_players,
                            int visibility,
                            const char *payload_b64,
                            char *buf,
                            size_t len);

// Write the lobby events collected since the last call as JSON into `buf`, and
// drop them:
// `{"events":[{"type":"invite|member_joined|member_left|lobby_closed","lobby_id",…}]}`.
//
// Reads memory only — the `arcane-session` thread does the polling, armed by
// the first lobby call. Payloads are base64. `member_joined` carries
// `user_id`, `pseudo` and `payload`; `invite` carries `join_code`,
// `from_user_id` and `pseudo`; `member_left` carries `user_id`.
//
// The queue is drained **only** once the JSON is safely in `buf`: a `-3` keeps
// every event so you can retry with a larger buffer.
//
// # Safety
//
// `buf` must be null or point to at least `len` writable bytes.
int arcane_sdk_lobby_events_json(char *buf, size_t len);

// Read a lobby as Arcane knows it right now and write it as JSON into `buf`.
//
// Use it after a `resync` event, or whenever you would rather ask than replay
// events. Same JSON, return values and threading rules as
// `arcane_sdk_lobby_create`; it joins nothing and leaves nothing.
//
// # Safety
//
// `lobby_id` must be null or a valid NUL-terminated C string. `buf` must be
// null or point to at least `len` writable bytes.
int arcane_sdk_lobby_get(const char *lobby_id, char *buf, size_t len);

// Invite one friend to a lobby.
//
// Both ids are NUL-terminated UTF-8. One synchronous loopback call. Returns 0
// on success, 1 on a null / non-UTF-8 argument or before init, 2 on an SDK
// error written to `err_buf` as `"code: message"` — `not_friends` when that
// account is not a friend.
//
// # Safety
//
// `lobby_id` and `to_user_id` must be valid NUL-terminated C strings.
// `err_buf` must be null or point to at least `err_len` writable bytes.

int arcane_sdk_lobby_invite(const char *lobby_id,
                            const char *to_user_id,
                            char *err_buf,
                            size_t err_len);

// Join a lobby by id — what an invite event carries — and write it as JSON
// into `buf`.
//
// Same JSON, return values and threading rules as `arcane_sdk_lobby_create`.
//
// # Safety
//
// `lobby_id` and `payload_b64` must be null or valid NUL-terminated C strings.
// `buf` must be null or point to at least `len` writable bytes.
int arcane_sdk_lobby_join(const char *lobby_id, const char *payload_b64, char *buf, size_t len);

// Join the lobby a six-character code points at, and write it as JSON into
// `buf`.
//
// The code is uppercased before it is checked. Same JSON, return values and
// threading rules as `arcane_sdk_lobby_create`; a malformed code gives `-4`
// with `invalid_argument` in `arcane_sdk_last_error_json`, raised before any
// call.
//
// # Safety
//
// `join_code` and `payload_b64` must be null or valid NUL-terminated C
// strings. `buf` must be null or point to at least `len` writable bytes.

int arcane_sdk_lobby_join_code(const char *join_code,
                               const char *payload_b64,
                               char *buf,
                               size_t len);

// Leave a lobby. For the host this ends it — there is no host migration.
//
// Same return values as `arcane_sdk_lobby_invite`.
//
// # Safety
//
// `lobby_id` must be a valid NUL-terminated C string. `err_buf` must be null
// or point to at least `err_len` writable bytes.
int arcane_sdk_lobby_leave(const char *lobby_id, char *err_buf, size_t err_len);

// Ownership as of the last check.
//
// Returns 0 (owned), 1 (DRM disabled for this title), or -1 if not initialised.
int arcane_sdk_ownership(void);

// Re-run the ownership check against Arcane desktop and update the client.
//
// Returns 0 on success, 1 if the client is not initialised, 2 on an SDK error.
// On failure the client keeps its previous state.
//
// # Safety
//
// `err_buf` must be null or point to at least `err_len` writable bytes.
int arcane_sdk_refresh(char *err_buf, size_t err_len);

// Write the play session state as JSON into `buf`:
// `{"session_id","tracking","played_seconds","fps_sampling","samples_taken","last_fps_avg"}`.
//
// `tracking` is `"active"`, `"pending"` or `"disabled"`. 256 bytes is enough.
//
// # Safety
//
// `buf` must be null or point to at least `len` writable bytes.
int arcane_sdk_session_json(char *buf, size_t len);

// Record the current display settings, attached to the FPS samples that follow.
//
// Both strings are NUL-terminated UTF-8, for example `"2560x1440"` and
// `"high"`. Empty strings clear the values. Never call this from the render
// loop — it takes a short lock.
//
// Returns 0 on success, 1 on a null / non-UTF-8 argument or when the client is
// not initialised.
//
// # Safety
//
// `resolution` and `preset` must be valid NUL-terminated C strings.
int arcane_sdk_set_graphics(const char *resolution, const char *preset);

// End the play session and drop the client.
//
// Reports the final playtime to the Arcane desktop app with a 2-second timeout,
// then releases the singleton. Call it when the game exits; it is also what you
// want on an editor play-mode reload.
void arcane_sdk_shutdown(void);

// Unix timestamp of the ownership ticket's expiry, or -1 when unknown.
long long arcane_sdk_ticket_expires_at(void);

// Write the signed-in Arcane account id into `buf`.
//
// # Safety
//
// `buf` must be null or point to at least `len` writable bytes.
int arcane_sdk_user_id(char *buf, size_t len);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* ARCANE_SDK_H */